--- a/hackaton/index.html
+++ b/hackaton/index.html
@@ -35,15 +35,21 @@
 		              <a class="dropdown-item" href="#">Something else here</a>
 		            </div>
 		        </li>
-		        <li class="nav-item active">
-		    		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		    	</li>
 		    </ul>
 
-		    <form class="form-inline my-2 my-lg-0">
+		    <form class="form-inline my-2 my-lg-0 mr-auto">
 		      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+		      <button class="btn btn-outline my-2 my-sm-0" type="submit">Submit</button>
 		    </form>
+
+		    <ul class="navbar-nav">
+		    	<li class="nav-item active">
+		    		<a class="nav-link" href="#">Ver Todo</a>
+		    	</li>
+		    	 <li class="nav-item">
+		    		<a class="nav-link" href="#">Agregar Productos </a>
+		    	</li>
+		    </ul>
 		  </div>
 		</nav>
 	</div>
