--- a/hackaton/index.html
+++ b/hackaton/index.html
@@ -30,9 +30,8 @@
 		              Productos
 		            </a>
 		            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		              <a class="dropdown-item" href="#">Action</a>
-		              <a class="dropdown-item" href="#">Another action</a>
-		              <a class="dropdown-item" href="#">Something else here</a>
+		              <a class="dropdown-item" href="#">Libros</a>
+		              <a class="dropdown-item" href="#">Discos</a>
 		            </div>
 		        </li>
 		    </ul>
@@ -52,6 +51,113 @@
 		    </ul>
 		  </div>
 		</nav>
+
+
+		<div class="cover-page">
+			<div class="row">
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="book" src="assets/images/Tuareg_novel_-_bookcover.jpg">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>	
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="book" src="assets/images/borges.png">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>	
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="book" src="assets/images/mil.jpg">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>	
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="disk" src="assets/images/moscasopa.jpg">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>	
+			</div>
+
+			<div class="row">
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="disk" src="assets/images/letitbe.jpg">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="cover">
+						<div class="photo">
+							<img class="disk" src="assets/images/giros.jpg">		
+						</div>
+						<div class="info">
+							<ul style="padding: 8px;">
+								<li class="product-description">Nombre:</li>
+								<li class="product-description">Categoria:</li>
+								<li class="product-description">Precio:</li>
+								<li class="product-description">Lugar de venta:</li>
+							</ul>
+						</div>
+					</div>
+				</div>	
+				<div class="col-md-3">
+					
+				</div>	
+				<div class="col-md-3">
+					
+				</div>		
+			</div>
+		</div>
+
+
 	</div>
 </body>
 </html>
