--- a/clase4/ej1.html
+++ b/clase4/ej1.html
@@ -34,9 +34,13 @@
 		<h3>Probemos los eventos...</h3>
 
 		<div class="botones">
+			<textarea id="btn-focus" cols="20" rows="10"></textarea><br><br>
 			<button id="btn-hover">HOVER</button>
 			<button id="btn-click">CLICK</button><br>
-			<textarea id="btn-focus" cols="20" rows="10"></textarea>
+		</div>
+
+		<div>
+			
 		</div>
 
 	</div>
