--- a/clase4/ej2.html
+++ b/clase4/ej2.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<h1>NATGEO...!</h1>
 		<div id="gallery">
-			<img src="http://assets.natgeotv.com/Footer2/93.Background.jpg">
+			<a href="https://www.google.com"><img src="http://assets.natgeotv.com/Footer2/93.Background.jpg"></a>
 			<img src="https://petapixel.com/assets/uploads/2014/08/musi9.png">
 			<img src="http://www.nationalgeographic.com/content/dam/photography/rights-exempt/InstagramBook/p271_MM7482_100821_13886.jpg">
 			<img src="http://l3.yimg.com/bt/api/res/1.2/ndTQD.ZuJTuHkELGNCrfFg--/YXBwaWQ9eW5ld3M7Zmk9aW5zZXQ7aD00MjE7cT04NTt3PTYzMA--/http://l.yimg.com/os/152/2012/11/28/acrobatic-jpg_161643.jpg">
