--- a/clase3/ej3.html
+++ b/clase3/ej3.html
@@ -9,7 +9,7 @@
 	<h1>Vamos a probar un formulario!</h1>
 	<form id="formulario">
 		<label>Usuario</label>
-		<input type="text" name="user-name" placeholder="usuario"><br>
+		<input type="text" name="user-name" placeholder="usuario" required=""><br>
 		<label>Passoword</label>
 		<input type="password" name="user-password" placeholder="password"><br>
 		<label>E-mail</label>
