--- a/clase5/grid.html
+++ b/clase5/grid.html
@@ -13,7 +13,13 @@
 			<span class="glyphicon glyphicon-search"></span>
 		</div>
 		<div class="row">
-			<div class="col-xs-6">Columna de 6</div>	
+			<div class="col-xs-6">
+				<div class="row">
+					<div class="col-xs-4">Columna de 4</div>
+					<div class="col-xs-4">Columna de 4</div>
+					<div class="col-xs-4">Columna de 4</div>
+				</div>
+			</div>	
 			<div class="col-xs-6">Columna de 6</div>	
 		</div>
 		<div class="row">
@@ -23,6 +29,31 @@
 			<div class="col-xs-2">Columna de 2</div>
 			<div class="col-xs-2">Columna de 2</div>
 			<div class="col-xs-2">Columna de 2</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+			<div class="col-xs-1">Col de 1</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<h1>Jumbotron</h1>
+		<div class="jumbotron">
+			<h1>Hello, world!</h1>
+			<p>...</p>
+			<p><a class="btn btn-primary btn-lg" href="#" role="button">+Info</a>
+				<a class="btn btn-default btn-lg" href="#" role="button">Contactar</a>
+			</p>
 		</div>
 	</div>
 </body>
