--- a/clase12/ej1.html
+++ b/clase12/ej1.html
@@ -3,12 +3,20 @@
 <head>
 	<title>Manipulando CSS</title>
 	<link rel="stylesheet" type="text/css" href="../basic-styles.css">
+	<style type="text/css">
+		h1 {
+			background-color: violet;
+			color: white;
+		}
+	</style>
 </head>
 <body>
 <div class="container">
 	<div id="change-me">
 		
 	</div>
+
+	<dir id="title"></dir>
 </div>
 </body>
 </html>
