--- a/clase13/args.html
+++ b/clase13/args.html
@@ -34,7 +34,7 @@
 		btn.addEventListener("keypress", function(event) {
 			var ctn = document.getElementsByClassName("info");
 			ctn[0].innerHTML = "Tecla presionada: " + event.code;
-			console.log(ctn);
+			console.log(event);
 		})
 		
 	</script>
