--- a/clase2/specificity.html
+++ b/clase2/specificity.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Especificidad</title>
-  <link rel="stylesheet" type="text/css" href="specificity.css">
+	<title>Especificidad</title>
+	<link rel="stylesheet" type="text/css" href="specificity.css">
+	<link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
 </head>
 <body>
-  <h1>Especificidad!</h1>
-  <div class="box">
-    <p id="text-01" class="text" style="color: blue;">
-      Tengo que tener algún color....
-    </p>
-  </div>
+	<div class="container">
+		<h1>Especificidad!</h1>
+		<div class="box">
+			<p class="text">
+				Tengo que tener algún color....
+			</p>
+		</div>
+	</div>
 </body>
 </html>
