--- a/clase3/units.html
+++ b/clase3/units.html
@@ -6,12 +6,15 @@
     div+p {
       color: red;
     }
+    span > p:hover {
+      color: white;
+    }
   </style>
 </head>
 <body>
-  <div style="width: 500px; font-size: 1em;">
+  <div style="width: 50%; font-size: 3em;">
     <span>
-      <p style="font-size: 50%;">
+      <p style="width: 50%;">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
