--- a/clase3/form2.html
+++ b/clase3/form2.html
@@ -10,7 +10,7 @@
 		<form method="post" action="https://formspree.io/matiassosas@gmail.com">
 			<label for="user-id">Usuario</label>
 			<input id="user-id" placeholder="User" type="text" name="user"><br>
-			<label>Password <input placeholder="Password" type="password" name=""></label><br>
+			<label>Password <input placeholder="Password" type="password" name="" required></label><br>
 			<label>
 				Correo
 				<input type="email" name="">
@@ -30,7 +30,7 @@
 				<option value="op3">opcion3</option>
 			</select>
 			<input type="checkbox" name="acept"><br>
-			<input type="submit" name=""><br>
+			<input id="submit" type="submit" name=""><br>
 		</form>
 	</div>
 </body>
