--- a/clase4/enero18-posicionamiento.html
+++ b/clase4/enero18-posicionamiento.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<h1>Posicionamiento</h1>
 		<div class="row">
-			<div id="col-01" style="position: fixed;"></div>
+			<div id="col-01"></div>
 			<div id="col-02"></div>
 		</div>
 		<div class="row">
