--- a/clase5/enero18/ej1.html
+++ b/clase5/enero18/ej1.html
@@ -2,12 +2,32 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="ej1.css">
 	<title>Bootstrap</title>
 </head>
 <body>
-<h1>Bienvenido a bootstrap</h1>
-<button class="btn btn'default">Button</button>
-<a class="btn btn-default" href="">Link</a>
-<input class="btn btn-default" type="" name="" placeholder="Input">
+<h1>Grid System</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">1 - 1</div>
+		<div class="col-sm-4 col-xs-6">1 - 2</div>
+		<div class="col-sm-4">1 - 3</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6">2 - 1</div>
+		<div class="col-sm-6">2 - 1</div>		
+	</div>
+</div>
+
+<div class="container">
+	<div class="jumbotron">
+		<h1>Jumbo tronnnnnn</h1>
+		<p>Esto es un parrafo</p>
+		<p>
+			<input class="btn btn-danger" type="" name="" placeholder="BOTON">
+		</p>
+	</div>
+</div>
+
 </body>
 </html>
