--- a/clase6/enero18/borrar.html
+++ b/clase6/enero18/borrar.html
@@ -58,31 +58,22 @@
 		  <form>
 		  	<div class="form-group">
 		  	  <label for="sel1">Agregar Producto</label>
-		  	    <select class="form-control select-picker dropup" id="sel1">
-		  	      <option>Libros</option>
-		  	      <option>Discos</option>		  	     
-		  	    </select>
+		  	    <div class="input-group">
+		  	          <input type="text" class="form-control dropdown-toggle" aria-label="...">
+		  	          <div class="input-group-btn">
+		  	            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>
+		  	            <ul class="dropdown-menu dropdown-menu-right">
+		  	              <li><a href="#">Action</a></li>
+		  	              <li><a href="#">Another action</a></li>
+		  	              <li><a href="#">Something else here</a></li>
+		  	              <li role="separator" class="divider"></li>
+		  	              <li><a href="#">Separated link</a></li>
+		  	            </ul>
+		  	          </div><!-- /btn-group -->
+		  	        </div><!-- /input-group -->
 		  	</div>
 		    <div class="form-group">
-		      <label for="exampleInputEmail1">Titulo</label>
-		      <input type="text" class="form-control" id="exampleInputEmail1">
-		    </div>
-		    <div class="form-group">
-		      <label for="exampleInputEmail1">Categoria</label>
-		      <input type="text" class="form-control" id="exampleInputEmail1">
-		    </div>
-		    <div class="form-group">
-		      <label for="exampleInputEmail1">Precio</label>
-		      <input type="text" class="form-control" id="exampleInputEmail1">
-		    </div>
-			<div class="form-group">
-		      <label for="exampleInputEmail1">Punto de Venta</label>
-		      <input type="text" class="form-control" id="exampleInputEmail1">
-		    </div>
-		    <div class="form-group">
-		      <label for="exampleInputEmail1">Imagen url</label>
-		      <input type="text" class="form-control" id="exampleInputEmail1">
-		    </div>
+		    
 
 		    <button type="submit" class="btn btn-primary">Publicar!</button>
 		  </form>
