--- a/clase10/enero18/poema.html
+++ b/clase10/enero18/poema.html
@@ -17,7 +17,7 @@
 
 	console.log(arregloOrdenado);
 
-	//var poema = arregloOrdenado.join();
+	var poema = arregloOrdenado.join(' ');
 	//var poema = arregloOrdenado.toString();
 	console.log(poema);
 </script>
