--- a/clase11/enero18/politicos.html
+++ b/clase11/enero18/politicos.html
@@ -11,30 +11,27 @@
       'ashton kutcher', 'mark whalberg', 'morgan freeman', 'mila kunis']
 
 
-  var obama_jobs = []
+      var obama_jobs = []
 
-  var politicos = {
-      secretary_of_state: 'hillary clinton',
-      potus: 'barack obama',
-      flotus: 'michelle obama',
-      vice_prez: 'joe biden',
-      gov_of_california: 'jerry brown'
-  }
-  
-  famous.forEach(function(item) {
-    if(item[0] === 'a') {
-      favorites.push(item);
-    }
-  })  
-  var b_named_politicos = {};
-  for(key in politicos) {
-    famous.push(politicos[key]);
-    obama_jobs.push(key);
-    if (politicos[key][0] === 'b' || politicos[key][politicos[key].indexOf(' ') + 1] === 'b') {
-      b_named_politicos[key] = politicos[key];
-    }
-  }
-  console.log(obama_jobs);
+      var politicos = {
+          secretary_of_state: 'hillary clinton',
+          potus: 'barack obama',
+          flotus: 'michelle obama',
+          vice_prez: 'joe biden',
+          gov_of_california: 'jerry brown'
+      }
+
+
+
+      var b_named_politicos = {};
+
+      for(key in politicos) {
+        var firstApellido = politicos[key].indexOf(' ') + 1;
+        if(politicos[key][0] === 'b' || politicos[key][firstApellido] === 'b') {
+          b_named_politicos[key] = politicos[key];
+        }
+      }
+
 </script>
 </body>
 </html>
