--- a/clase11/enero18/primerObjeto.html
+++ b/clase11/enero18/primerObjeto.html
@@ -11,11 +11,22 @@
     'cantidad de tripulantes': 7,
     tripulantes: ['Jorge','Julian','Marcelo','Mariana','Pebetin','Theo','Matias'],
     estado: 'usada',
+    comandante: {
+      name: 'Spok',
+      age: 2313
+    },
     despegar: function() {
       console.log("Despegue en 3, 2, 1 ... OH NO, ESPEREN, ALGO SE ROMPIÓ!");
       alert("BOOOOM!!");
     }
   }
+
+
+  var Person = function(name, age) {
+    this.nombre = name;
+    this.edad = age;
+  }
+
 </script>
 </body>
 </html>
